# cmd-rust

./: Cargo.toml
catr/: Cargo.toml  err
catr/src/: lib.rs  main.rs
catr/tests/: cli.rs
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
grrs/: Cargo.toml
grrs/examples/: assertfs.rs  confy.rs  confy2.rs  ctrlc.rs
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
headr/: Cargo.toml
headr/src/: lib.rs  main.rs
headr/tests/: cli.rs  cli.rs.bk  cli.rs.ori
headr/tests/expected/: all.c1.out  cn.txt.c4.out  cn.txt.n2.out  cn.txt.n4.out
headr/tests/inputs/: cn.txt
wcr/: Cargo.toml
wcr/src/: lib.rs
wcr/tests/: cli.rs
