[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.7", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.3"
log = "0.4.21"
