[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
assert_fs = "1.1.1"
clap = { version = "4.5.7", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
confy = "0.6.1"
ctrlc = "3.4.4"
env_logger = "0.11.3"
log = "0.4.21"
pretty_assertions = "1.4.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.117"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
