[package]
name = "wcr"
version = "0.1.0"
edition = "2021"
author = "oywz<oywz@gmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
anyhow = "1.0.86"
pretty_assertions = "1.4.0"

[dev-dependencies]
pretty_assertions = "1.4.0"
rand = "0.8.5"
assert_cmd = "2.0.14"
predicates = "3.1.0"
